--- a/style.css
+++ b/style.css
@@ -21,27 +21,33 @@ p
     text-align:var();
     float:inline-start;
 }
-.samosa
+.samosa,.pavbhaji
 {
     background-color: rgb(240, 238, 227);
     color: black;
 }
-.samosa h1
+.pavbhaji h1,.samosa h1
 {
     text-decoration:dashed;
     color: rgba(0, 0, 0, 0.434);
     font: 800;
 }
-.samosa p
+.samosa p,.pavbhaji p
 {
     line-height: 0.5;
     font-weight: 900;
 }
-.samosa h2
+.samosa h2,.pavbhaji h2
+
 {
     font-weight: 900;
     text-decoration: underline;
     text-decoration-color: black;
+}
+.pavbhaji img
+{
+    width: 250px;
+    height: 250px;
 }
 
 
